feat: create main

--- a/index.html
+++ b/index.html
@@ -25,10 +25,28 @@
 
         <div class="btn-header">
             <a href="">Login</a>
-            <button>become a Member  <img src="./src/assets/img/arrow-right.svg" alt=""></button>
+            <button>become a Member <img src="./src/assets/img/arrow-right.svg" alt=""></button>
         </div>
     </header>
     <!-- fim header -->
+
+    <!-- começo main -->
+    <main>
+        <div class="Financial">
+            <h1>Financial Assistance With True Purpose</h1>
+            <p>We know how large objects will act,
+                but things on a small scale.</p>
+            <div class="btn-main">
+                <button class="btn-primary">Get Quote Now</button>
+                <button class="btn-second">Learn More</button>
+            </div>
+        </div>
+
+        <img src="./src/assets/img/illustration-main.svg" alt="">
+
+    </main>
+
+    <!-- fim main -->
 
 </body>
 
