feat:  create Strategy in index.html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,86 @@
     </main>
 
     <!-- fim main -->
+    <!-- Strategy -->
+    <section class="Strategy-container">
+        <div class="Strategy-info">
+            <h2>Better Strategy With
+                Quality Business</h2>
+            <p>Problems trying to resolve the conflict between
+                the two major realms of Classical physics: Newtonian mechanics </p>
+        </div>
+        <div class="cards">
+            <div class="Strategy-content">
+                <div class="Strategy-cards">
+                    <img src="./src/assets/img/icn resize .icn-xl.svg" alt="">
+                </div>
+                <div class="info">
+                    <h2>Investment Trading</h2>
+                    <p>the quick fox jumps over thelazy dog</p>
+                </div>
 
+
+            </div>
+            <div class="Strategy-content">
+                <div class="Strategy-cards">
+                    <img src="./src/assets/img/icn resize .icn-xl.svg" alt="">
+                </div>
+                <div class="info">
+                    <h2>Support On Raising Funds</h2>
+                    <p>the quick fox jumps over thelazy dog</p>
+                </div>
+
+
+            </div>
+            <div class="Strategy-content">
+                <div class="Strategy-cards">
+                    <img src="./src/assets/img/icn resize .icn-xl.svg" alt="">
+                </div>
+                <div class="info">
+                    <h2>Financial Analysis</h2>
+                    <p>the quick fox jumps over thelazy dog</p>
+                </div>
+
+
+            </div>
+            <div class="Strategy-content">
+                <div class="Strategy-cards">
+                    <img src="./src/assets/img/icn resize .icn-xl.svg" alt="">
+                </div>
+                <div class="info">
+                    <h2>Taxation Planning</h2>
+                    <p>the quick fox jumps over thelazy dog</p>
+                </div>
+
+
+            </div>
+            <div class="Strategy-content">
+                <div class="Strategy-cards">
+                    <img src="./src/assets/img/icn resize .icn-xl.svg" alt="">
+                </div>
+                <div class="info">
+                    <h2>Save money and tim</h2>
+                    <p>the quick fox jumps over thelazy dog</p>
+                </div>
+
+
+            </div>
+            <div class="Strategy-content">
+                <div class="Strategy-cards">
+                    <img src="./src/assets/img/icn resize .icn-xl.svg" alt="">
+                </div>
+                <div class="info">
+                    <h2>Outsourced Consulting Business</h2>
+                    <p>the quick fox jumps over thelazy dog</p>
+                </div>
+
+
+            </div>
+        </div>
+    </section>
+
+
+    <!-- fim Strategy -->
 </body>
 
 </html>
