feat:  create clients index.html

--- a/index.html
+++ b/index.html
@@ -125,6 +125,27 @@
         </div>
     </section>
     <!-- fim Strategy -->
+
+    <!-- clients -->
+    <section class="clientes-">
+        <div class="clients-container">
+            <h2>What Clients Say</h2>
+            <p>Problems trying to resolve the conflict between
+                the two major realms of Classical physics: Newtonian mechanics </p>
+        </div>
+        <div class="miles-container">
+            <img src="./src/assets/img/miles.svg" alt="">
+            <p>Slate helps you see how many more days you need 
+                to work to reach your financial goal for the month and year.</p>
+                <img id="" src="./src/assets/img/stars.svg" alt="">
+                <h2>Regina Miles</h2>
+                <p id="second">Designer</p>
+        </div>
+      
+    </section>
+
+
+    <!-- fim clients -->
 </body>
 
 </html>
