feat:  create download index.html

--- a/index.html
+++ b/index.html
@@ -135,17 +135,71 @@
         </div>
         <div class="miles-container">
             <img src="./src/assets/img/miles.svg" alt="">
-            <p>Slate helps you see how many more days you need 
+            <p>Slate helps you see how many more days you need
                 to work to reach your financial goal for the month and year.</p>
-                <img id="" src="./src/assets/img/stars.svg" alt="">
-                <h2>Regina Miles</h2>
-                <p id="second">Designer</p>
+            <img id="" src="./src/assets/img/stars.svg" alt="">
+            <h2>Regina Miles</h2>
+            <p id="second">Designer</p>
         </div>
-      
     </section>
-
-
     <!-- fim clients -->
+
+    <!-- download -->
+    <section class="download">
+        <div class="download-info">
+            <h2>Download Our App</h2>
+            <p>Problems trying to resolve the conflict between
+                the two major realms of Classical physics: Newtonian mechanics </p>
+        </div>
+        <div class="cards-container">
+            <div class="download-cards">
+                <div class="cards-img">
+                    <img src="./src/assets/img/apple.svg" alt="">
+                </div>
+                <div class="cards-info">
+                    <p>Download on</p>
+                    <h5>App Store
+                    </h5>
+                </div>
+            </div>
+            <div class="download-cards">
+                <div class="cards-img">
+                    <img src="./src/assets/img/gloogle play.svg" alt="">
+                </div>
+                <div class="cards-info">
+                    <p>Download on</p>
+                    <h5>Google Play
+                    </h5>
+                </div>
+            </div>
+
+            <div class="download-cards">
+                <div class="cards-img">
+                    <img src="./src/assets/img/amazon.svg" alt="">
+                </div>
+                <div class="cards-info">
+                    <p>Download on</p>
+                    <h5>Amazon.com
+                    </h5>
+                </div>
+            </div>
+            <div class="download-cards">
+                <div class="cards-img">
+                    <img src="./src/assets/img/windows.svg" alt="">
+                </div>
+                <div class="cards-info">
+                    <p>Download on</p>
+                    <h5>Windows Store
+                    </h5>
+
+                </div>
+            </div>
+        </div>
+
+
+
+    </section>
+    <!-- fim download -->
 </body>
 
 </html>
