feat:  create pricing index.html

--- a/index.html
+++ b/index.html
@@ -195,11 +195,59 @@
                 </div>
             </div>
         </div>
-
-
-
     </section>
     <!-- fim download -->
+
+    <!-- pricing -->
+    <section class="pricing">
+        <div class="pricing-info">
+            <h2>Pricing</h2>
+            <p>Problems trying to resolve the conflict between
+                the two major realms of Classical physics: Newtonian mechanics </p>
+        </div>
+        <div class="pricing-cards">
+            <div class="card">
+                <div class="card-left">
+                    <h2>FREE</h2>
+                    <p>
+                        Most calendars are designed for teams. Slate is designed
+                        for freelancers who want a simple way
+                    </p>
+                </div>
+                <div class="card-right">
+                    <div class="price-container">
+                        <div class="price">0</div>
+                        <div class="price-info">
+                            <span class="currency-symbol">$</span>
+                            <span class="per-month">Per Month</span>
+                        </div>
+                    </div>
+                    <button class="button">Try for free</button>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-left">
+                    <h2>STANDART</h2>
+                    <p>
+                        Most calendars are designed for teams. Slate is designed
+                        for freelancers who want a simple way
+                    </p>
+                </div>
+                <div class="card-right">
+                    <div class="price-container">
+                        <div class="price">19</div>
+                        <div class="price-info">
+                            <span class="currency-symbol">$</span>
+                            <span class="per-month">Per Month</span>
+                        </div>
+                    </div>
+                    <button class="button">Try for free</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- fim pricing -->
 </body>
 
 </html>
