feat:  create branches  index.html

--- a/index.html
+++ b/index.html
@@ -248,6 +248,25 @@
     </section>
 
     <!-- fim pricing -->
+
+    <!-- branches -->
+    <section>
+        <div class="branches-container">
+            <div class="branches-info">
+                <h2>We Have Branches All
+                    Over The World</h2>
+                <p>The gradual accumulation of information about atomic and
+                    small-scale behaviour during the first quarter of the 20th
+                    century, which gave some indications about how small things
+                    do behave, produced an increasing confusion which was
+                    Heisenberg, and Born.</p>
+            </div>
+            <img src="./src/assets/img/mapa.svg" alt="">
+        </div>
+    </section>
+
+
+    <!-- fim branches -->
 </body>
 
 </html>
