feat:  footer  index.html

--- a/index.html
+++ b/index.html
@@ -300,9 +300,58 @@
             </form>
         </div>
     </section>
-
-
     <!-- fim appointament -->
+
+    <!-- footer -->
+    <footer class="footer">
+        <div class="footer-container">
+
+            <div class="footer-section">
+                <h2>Get In Touch</h2>
+                <p>the quick fox jumps over <br>thelazy dog</p>
+                <div class="social-icons">
+                    <img src="/src/assets/img/facebook (1).svg" alt="Facebook">
+                    <img src="/src/assets/img/instagram (1).svg" alt="Instagram">
+                    <img src="/src/assets/img/twitter.png" alt="Twitter">
+                </div>
+            </div>
+
+            <div class="footer-section">
+                <h2>Company info</h2>
+                <ul>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Carrier</a></li>
+                    <li><a href="#">We are hiring</a></li>
+                    <li><a href="#">Blog</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-section">
+                <h2>Features</h2>
+                <ul>
+                    <li><a href="#">Business Marketing</a></li>
+                    <li><a href="#">User Analytic</a></li>
+                    <li><a href="#">Live Chat</a></li>
+                    <li><a href="#">Unlimited Support</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-section">
+                <h2>Resources</h2>
+                <ul>
+                    <li><a href="#">IOS & Android</a></li>
+                    <li><a href="#">Watch a Demo</a></li>
+                    <li><a href="#">Customers</a></li>
+                    <li><a href="#">API</a></li>
+                </ul>
+            </div>
+
+        </div>
+    </footer>
+    <!-- fim footer -->
+     <div class="copy">
+        <p>Made With Love By Figmaland All Right Reserved </p>
+     </div>
 </body>
 
 </html>
