feat:  responsividade mobile

--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
             </ul>
         </nav>
 
+        <!-- ------ Menu Mobile ------ -->
+
+        <div class="menu-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+
+        <!-- ------ Fim Menu Mobile ------ -->
+
         <div class="btn-header">
             <a href="">Login</a>
             <button>become a Member <img src="./src/assets/img/arrow-right.svg" alt=""></button>
@@ -349,9 +359,9 @@
         </div>
     </footer>
     <!-- fim footer -->
-     <div class="copy">
+    <div class="copy">
         <p>Made With Love By Figmaland All Right Reserved </p>
-     </div>
+    </div>
 </body>
 
 </html>
